Fixed the issue with not showing color on the index-page if you are in a given queue.

--- a/public/main.less
+++ b/public/main.less
@@ -246,6 +246,15 @@ table.table-striped > tbody > tr:nth-child(even).red-background > td
 {
  background-color: @red-even;
 }
+div.light-blue-background
+{
+  background-color: #C5E7FF;
+}
+div.light-blue-background:hover
+{
+  background-color: #B5DAF5;
+  cursor: pointer;
+}
 .panel
 {
   font-size: 1.2em;
